--- a/style.css
+++ b/style.css
@@ -392,6 +392,42 @@ footer p {
     animation-fill-mode:forwards;
 }
 
+/*CODE TO AUTO-SWAP IMG AT CARD INFO*/
+
+.image-fader img {
+    position: absolute;
+    animation-name: imagefade;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-duration: 6s;
+  }
+  
+  @keyframes imagefade {
+    0% {
+        opacity:1;
+    }
+    25% {
+        opacity:1;
+    }
+    50% {
+        opacity:0;
+    }
+    75% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+  }
+  
+  .image-fader img:nth-of-type(1) {
+    animation-delay: 3s;
+  }
+  .image-fader img:nth-of-type(2) {
+    animation-delay: 0s;
+  }
+  
+
 @media only screen and (min-width: 350px) and (max-width: 500px) {
     html {
         font-size: 7px;
@@ -411,8 +447,8 @@ footer p {
     
     .cards-container {
         flex-direction: column;
-        align-items: center; */
-    }
+        align-items: center;
+    }*/
 }
 
 @media only screen and (min-width: 500px) and (max-width: 600px) {
