--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     margin: 0em; 
 }
 
+.row, .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    --bs-gutter-x: 0rem;
+}
+
 .navbar-brand img {
     display: flex;
     width: 22%;
@@ -80,7 +84,7 @@ div#navbar-right {
 }
 
 #rc2 {
-    background-color:#201b24;
+    background-color:black;
 }
 
 #header-1 {
@@ -98,9 +102,9 @@ div#navbar-right {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: calc(100vh - 80px);
+    /* height: calc(100vh - 80px); */
+    height: 50rem;
     background-position: center center;
-    justify-content: center;
 }
 
 .side-text-content {
@@ -120,7 +124,7 @@ div#navbar-right {
 
 .card-container {
     padding: 3rem;
-    display: flex;
+    /* /* display: flex; */
     justify-content: space-around;
 }
 
@@ -148,7 +152,7 @@ div#navbar-right {
 }
 
 footer {
-    background-color: #201b24;
+    background-color: black;
     padding: 3em;
     color: white;
 }
@@ -191,13 +195,15 @@ footer p {
     /* height: calc(100vh - 80px); */
     background-position: center center;
     justify-content: center;
-    padding: 5rem;
+    padding: 0rem;
     overflow: hidden;
 }
 
 .left-info-card {
     border-radius:0em 3em 3em 0em;
-    margin: 1rem 10rem 1rem -10rem;
+    margin: 2rem 0rem 2rem 0rem;
+    position: relative;
+    right: 5%;
     padding: 3rem;
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
     backdrop-filter: blur(5px);
@@ -205,17 +211,19 @@ footer p {
     justify-content: end;
 }
 
-.left-info-card img {
+/* .left-info-card img {
     border-radius:3em 0em 3em 3em;
     vertical-align: top;
     width: 36em;
     height: 27em;
     image-rendering: auto;
-}
+} */
 
 .right-info-card {
     border-radius:3em 0em 0em 3em;
-    margin: 1rem -10rem 1rem 10rem;
+    margin: 2rem 0rem 2rem 0rem;
+    position: relative;
+    left: 5%;
     padding: 3rem;
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
     backdrop-filter: blur(5px);
@@ -233,7 +241,8 @@ footer p {
 
 .img-info-container {
     display: flex;
-    justify-content: end;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .info-card-text {
@@ -433,7 +442,16 @@ footer p {
     animation-delay: 0s;
   }
 
-@media only screen and (min-width: 350px) and (max-width: 500px) {
+  .carousel-caption-custom {
+    border-radius: 1rem 1rem 0 0;
+    backdrop-filter: blur(5px);
+    right: 0%;
+    left: 0%;
+    top: 0%;
+    bottom: 80%;
+  }
+
+/*@media only screen and (min-width: 350px) and (max-width: 500px) {
     html {
         font-size: 7px;
     }
@@ -453,10 +471,10 @@ footer p {
     .cards-container {
         flex-direction: column;
         align-items: center;
-    }*/
-}
+    }
+}*/
 
-@media only screen and (min-width: 500px) and (max-width: 600px) {
+/*@media only screen and (min-width: 500px) and (max-width: 600px) {
     html {
         font-size: 8px;
     }
@@ -477,9 +495,9 @@ footer p {
         flex-direction: column;
         align-items: center;
     } */
-}
+/* } */
 
-@media only screen and (min-width: 600px) and (max-width: 800px) {
+/* @media only screen and (min-width: 600px) and (max-width: 800px) {
     html {
         font-size: 8px;
     }
@@ -489,7 +507,7 @@ footer p {
     html {
         font-size: 10px;
     }
-}
+} */
 /* 
 @media (width <= 1100px) {
     html {
